Ajustes de pagina web diseño

--- a/src/app/carrousel/carrousel.component.html
+++ b/src/app/carrousel/carrousel.component.html
@@ -53,6 +53,25 @@
           <p class="text-dark">Texto para Imagen 6</p>
         </div>
       </div>
+
+    </slide>
+    <slide>
+      <div>
+        <img src="https://s3.ppllstatics.com/elcorreo/www/multimedia/202211/09/media/cortadas/Comic_alvaropons-anime-manga-kxHF-U180652286238MIF-1248x770@El%20Correo.jpeg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">Imagen 7</h5>
+          <p class="text-dark">Texto para Imagen 7</p>
+        </div>
+      </div>
+    </slide>
+    <slide>
+      <div>
+        <img src="https://fotos.perfil.com/2023/09/05/inteligencia-artificial-cuales-son-las-regulaciones-que-se-impulsan-en-el-mundo-1646974.jpg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">Imagen 8</h5>
+          <p class="text-dark">Texto para Imagen 8</p>
+        </div>
+      </div>
     </slide>
   </carousel>
 </div>
