--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -38,7 +38,7 @@
     </section>
   </div>
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-    Copyright © 2023 HubSpot, Inc.
+    Copyright © {{ currentYear }} HubSpot, Inc.
   </div>
 </footer>
 </div>
