--- a/src/app/nadvar/nadvar.component.html
+++ b/src/app/nadvar/nadvar.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link active Ayuda-link" routerLink="/Informacion"><i class="bi bi-question-octagon"><b>{{'Information'|translate}}</b></i></a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link active Ayuda-link" role="button" data-bs-toggle="dropdown"><i class="bi bi-question-octagon"><b>Categorias</b></i></a>
+          <a class="nav-link active Ayuda-link linkprod" role="button" data-bs-toggle="dropdown"><i class="bi bi-question-octagon"><b>Categorias</b></i></a>
           <ul class="dropdown-menu">
             <li><a (click)="click()" class="dropdown-item" >Documentales</a></li>
             <li><a (click)="click()" class="dropdown-item" >Entretimiento</a></li>
