--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -49,6 +49,18 @@
 </div>
 <h1>{{'InfoH1'|translate}}</h1>
 <hr>
+<div class="row">
+  <div class="col-3">
+    <img [src]="img" class="card-img-top img-fluid" alt="Pago" style="width: 304px; height: 236px;">
+  </div>
+  <div class="col-8">
+    <h2 style="text-align: center;">ACERCA DE</h2>
+    <p style="text-align:justify">{{parrafo}}</p>
+    <p style="text-align:justify">{{vision}}</p>
+    <p style="text-align:justify">{{Mision}}</p>
+  </div>
+</div>
+<hr>
 <div class="d-flex justify-content-center">
   <img src="https://w7.pngwing.com/pngs/358/741/png-transparent-product-manuals-safety-system-owner-s-manual-organization-royal-signmanual.png" width="200" height="150" alt="">
 </div>
@@ -113,3 +125,4 @@
     </div>
   </div>
 </div>
+
