--- a/src/app/nadvar/nadvar.component.html
+++ b/src/app/nadvar/nadvar.component.html
@@ -23,6 +23,12 @@
             <li><a (click)="click()" class="dropdown-item" >Tecnologias</a></li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active history-link" routerLink="/Multimedia"><i class="bi bi-book-half"><b>{{'Multimedia'|translate}}</b></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active Ayuda-link" routerLink="/Foro"><i class="bi bi-question-octagon"><b>{{'Foro'|translate}}</b></i></a>
+        </li>
       </ul>
 
       <div class="d-flex justify-content-center align-items-center">
