--- a/src/app/home/news/news.component.html
+++ b/src/app/home/news/news.component.html
@@ -15,7 +15,7 @@
   <form class="d-flex" role="search">
     <div class="input-group">
       <input id="searchQuery" name="searchQuery"  class="form-control" type="search" placeholder="{{'search'|translate}}" aria-label="Search" style="width: 350px;">
-      <button  class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+      <button (click)="mostrardata()" class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
     </div>
   </form>
 </div>
