--- a/src/app/home/plays/plays.component.css
+++ b/src/app/home/plays/plays.component.css
@@ -28,7 +28,7 @@
 	width: 200px;
 	border:2px solid white;
 	text-align: center;
-	margin:20px auto; /*top and bottom 20 px and centre it*/
+	margin:20px auto;
 	padding: 20px 20px;
 	font-size: 40px;
 	position: relative;
