--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,11 @@
   <app-nadvar></app-nadvar>
   <div class="container-fluid">
     <router-outlet></router-outlet>
+    <a routerLink="/Chatbot">
+      <div class="container-i">
+        <i class="bi bi bi-robot fs-1"></i>
+      </div>
+    </a>
   </div>
   <app-footer></app-footer>
 </div>
