--- a/src/app/nadvar/nadvar.component.html
+++ b/src/app/nadvar/nadvar.component.html
@@ -1,4 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+<section class="cover-section" style="background-image: url('https://3.bp.blogspot.com/-Rt0ZuBNGu4Q/WtJwJ6omGSI/AAAAAAAABzc/bYAAOS5UjjggVYEj21yDie-XV-gcKGbigCLcBGAs/s1600/jp3.gif'); height: 200px; background-size: cover; background-position: center;">
+  <div class="container text-center text-white d-flex justify-content-center align-items-center h-100">
+    <h1 class="display-4" style="color: black;">La Magia de la Historia y Transformación</h1>
+  </div>
+</section>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/Home"><img [src]="logo" width="90" height="90" alt="..."></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,10 +48,10 @@
                 <option [selected]="lang==='es'" value="es">Español </option>
               </select>
             </li>
-        </ul>
+          </ul>
           <form class="d-flex" role="search">
             <div class="input-group">
-              <input id="searchQuery" name="searchQuery"  class="form-control" type="search" placeholder="{{'search'|translate}}" aria-label="Search" style="width: 350px;">
+              <input id="searchQuery" name="searchQuery" class="form-control" type="search" placeholder="{{'search'|translate}}" aria-label="Search" style="width: 350px;">
               <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
             </div>
           </form>
@@ -53,6 +60,8 @@
     </div>
   </div>
 </nav>
+
+
 
 
 
