--- a/src/app/page/chatbot/chatbot.component.html
+++ b/src/app/page/chatbot/chatbot.component.html
@@ -8,7 +8,7 @@
       <div [ngClass]="{'user-message': msg.sender === 'user', 'bot-message': msg.sender === 'bot'}">
         <div *ngIf="msg.sender === 'bot'" class="bot-message-content">
           <img class="bot-profile-image" src="assets/Images/Logo.png" alt="Bot Avatar">
-          <p>{{ msg.text }}</p>
+          <p [innerHTML]="msg.animatedText"></p>
         </div>
 
         <div *ngIf="msg.sender === 'user'" class="user-message-content">
@@ -24,6 +24,10 @@
     <button class="btn btn-outline-success" (click)="sendMessage()" type="submit">Enviar</button>
   </div>
 </div>
+
+
+
+
 
 
 
