--- a/src/app/carrousel/carrousel.component.html
+++ b/src/app/carrousel/carrousel.component.html
@@ -2,76 +2,84 @@
   <carousel class="carousel" [itemsPerSlide]="1">
     <slide>
       <div>
-        <img src="https://img.freepik.com/fotos-premium/escenografia-anime-ciudad-vista-ciudad-ciudad-fondo_902639-39489.jpg" alt="" class="d-block w-100" style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Imagen 1</h5>
-          <p class="text-dark">Texto para la imagen 1.</p>
+        <img src="https://img2.rtve.es/im/6450763/?w=900" alt="" class="d-block w-100" style="height: 300px;">
+        <div class="carousel-caption custom-caption d-none d-md-block">
+          <h5 class="text-primmary">Documentales</h5>
+          <p class="text-primmary">Descubre historias fascinantes a través de documentales únicos que exploran culturas,
+             naturaleza, ciencia y eventos históricos impactantes.</p>
         </div>
       </div>
     </slide>
     <slide>
       <div>
-        <img src="https://pm1.aminoapps.com/6198/14a5e486ef130d9705cffad1a17888d27d79e1ce_hq.jpg" alt="" class="d-block w-100 " style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Imagen 2</h5>
-          <p class="text-dark">Texto para la imagen 2.</p>
+        <img src="https://marketing4ecommerce.net/wp-content/uploads/2020/03/nueva-portada-enero.jpeg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption custom-caption d-none d-md-block">
+          <h5 class="text-primmary">Entretenimiento</h5>
+          <p class="text-primmary">Sumérgete en el mundo del entretenimiento con contenidos innovadores que te cautivarán.</p>
         </div>
       </div>
     </slide>
     <slide>
       <div>
-        <img src="https://lafrikileria.com/blog/wp-content/uploads/2023/07/robots-mecha-japoneses-anime.jpg" alt="" class="d-block w-100 " style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Imagen 3</h5>
-          <p class="text-dark">Texto para la imagen 3.</p>
-        </div>
-      </div>
-    </slide>
-    <slide>
-      <div>
-        <img src="assets/Images/Paisaje.png" alt="" class="d-block w-100 " style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Imagen 4</h5>
-          <p class="text-dark">Paisaje.</p>
-        </div>
-      </div>
-    </slide>
-    <slide>
-      <div>
-        <img src="https://gifsec.com/wp-content/uploads/2022/11/dark-anime-gif-1.gif" alt="" class="d-block w-100 " style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Imagen 5</h5>
-          <p class="text-dark">Texto para la Imagen 5.</p>
+        <img src="https://s3.ppllstatics.com/elcorreo/www/multimedia/202211/09/media/cortadas/Comic_alvaropons-anime-manga-kxHF-U180652286238MIF-1248x770@El%20Correo.jpeg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption custom-caption d-none d-md-block">
+          <h5 class="text-primmary">Arte</h5>
+          <p class="text-primmary">Explora el arte en todas sus formas,
+            descubriendo obras maestras y el proceso creativo de artistas visionarios.</p>
         </div>
       </div>
     </slide>
     <slide>
       <div>
         <img src="https://www.ui1.es/sites/default/files/blog/images/minima_neurociencia.jpg" alt="" class="d-block w-100 " style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Imagen 6</h5>
-          <p class="text-dark">Texto para Imagen 6</p>
+        <div class="carousel-caption custom-caption d-none d-md-block">
+          <h5 class="text-primmary">Ciencias</h5>
+          <p class="text-primmary">Adéntrate en el fascinante universo de las ciencias,
+            que explican descubrimientos y avances sorprendentes.</p>
+        </div>
+      </div>
+    </slide>
+    <slide>
+      <div>
+        <img src="https://www.esan.edu.pe/images/blog/2018/06/18/1500x844-gestion-conocimiento.jpg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption custom-caption d-none d-md-block">
+          <h5 class="text-primmary">Conocimientos</h5>
+          <p class="text-primmary">Amplía tu mente con contenidos educativos que te ofrecen conocimientos profundos sobre
+             historia, filosofía y más.</p>
+        </div>
+      </div>
+    </slide>
+    <slide>
+      <div>
+        <img src="https://www.solmicro.com/images/joomlart/article/569585164bf57f8a1e8703b19497bdbc.jpg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption custom-caption d-none d-md-block">
+          <h5 class="text-primmary">Tecnologias</h5>
+          <p class="text-primmary">Conoce los avances tecnológicos que están transformando el mundo,
+             desde la inteligencia artificial hasta innovaciones futuristas.</p>
         </div>
       </div>
 
     </slide>
     <slide>
       <div>
-        <img src="https://s3.ppllstatics.com/elcorreo/www/multimedia/202211/09/media/cortadas/Comic_alvaropons-anime-manga-kxHF-U180652286238MIF-1248x770@El%20Correo.jpeg" alt="" class="d-block w-100 " style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Imagen 7</h5>
-          <p class="text-dark">Texto para Imagen 7</p>
+        <img src="https://www.hacerfamilia.com/wp-content/uploads/2024/07/20150622085514.jpg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption custom-caption d-none d-md-block">
+          <h5 class="text-primmary">Peliculas</h5>
+          <p class="text-primmary">Disfruta de películas emocionantes que te transportan a nuevos
+            mundos, con historias que te llamaran la atencion.</p>
         </div>
       </div>
     </slide>
     <slide>
       <div>
-        <img src="https://fotos.perfil.com/2023/09/05/inteligencia-artificial-cuales-son-las-regulaciones-que-se-impulsan-en-el-mundo-1646974.jpg" alt="" class="d-block w-100 " style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Imagen 8</h5>
-          <p class="text-dark">Texto para Imagen 8</p>
+        <img src="https://plammedia.agency/wp-content/uploads/2024/03/Marketing-Inmersivo.jpg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption custom-caption d-none d-md-block">
+          <h5 class="text-primmary">Marketing Digital</h5>
+          <p class="text-primmary">Descubre las mejores estrategias de marketing, analizando
+            casos de éxito y las últimas tendencias para impulsar tu negocio.</p>
         </div>
       </div>
     </slide>
   </carousel>
 </div>
+
