--- a/src/app/historia/historia.component.html
+++ b/src/app/historia/historia.component.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">{{parrafo}}</h1>
+<p class="h1 text-center display-4 display-sm-3 display-md-2 display-lg-1">{{parrafo}}</p>
 <div class="mb-3 d-flex justify-content-center">
   <form class="d-flex" role="search">
     <div class="input-group">
