--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,10 @@
 </div>
 <br>
 <div class="row">
-  <p class="text-center">Aparece por primera vez en Japón a principios del siglo XX como forma de
-    hacer frente al gigante Disney. Estos dibujos animados a modo de caricaturas
-    japonesas son la representación en la gran pantalla de muchas de las famosas
-    historias que podemos leer en los mangas.</p>
+  <p class="text-center">Explore una variedad de contenido emocionante, desde Documentales
+    y arte hasta la tecnologia. Disfrute de historias y conocimientos que lo inspire y transforme
+    sus puntos de vistas en el mundo de hoy.
+  </p>
   <h2 class="text-center">{{'info'|translate}}</h2>
 </div>
 <br>
@@ -124,4 +124,5 @@
       </div>
   </div>
 </div>
+<br>
 
