--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,11 +9,63 @@
   color: #090e13;
 }
 
-img {
-  transition: transform 0.2s ease;
+h5,p{
+  color: #090e13;
 }
 
 img:hover {
-  transform: scale(1.2);
+  filter: grayscale(100%);
+}
+
+
+.flip-card {
+  width: 18rem;
+  background: rgba(0, 123, 255, 0.1);
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+  opacity: 0.9;
+}
+
+.flip-card:hover {
+  opacity: 1;
+  transform: translateY(-10px);
+}
+
+.card-img-top {
+  width: 304px;
+  height: 236px;
+  object-fit: cover;
+}
+
+.card-body {
+  text-align: center;
+  color: #fff;
+}
+
+.card-title {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.card-text {
+  font-size: 1rem;
+  margin-bottom: 15px;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+  padding: 10px 20px;
+  font-size: 1rem;
+  color: #fff;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #004085;
 }
 
