--- a/src/app/multimedia/multimedia.component.css
+++ b/src/app/multimedia/multimedia.component.css
@@ -10,8 +10,8 @@
 }
 
 .bg-overlay {
-  background: rgba(0, 0, 0, 0.5);
-  padding: 40px;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 10px;
   border-radius: 15px;
   text-align: center;
 }
@@ -34,6 +34,61 @@ p {
   transform: scale(1.05);
 }
 
+#galeria {
+  padding: 50px 0;
+  background-color: #141414;
+}
+
+.gallery-container {
+  display: flex;
+  justify-content: center;
+}
+
+.gallery-scroll {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
+  max-height: 500px;
+  overflow-y: auto;
+  width: 100%;
+  justify-content: center;
+}
+
+.image-item {
+  position: relative;
+  width: 250px;
+  height: 350px;
+  border-radius: 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.image-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+.image-item:hover {
+  transform: scale(1.1);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+}
+
+.image-item.selected {
+  border: 3px solid #fff;
+  transform: scale(1.05);
+}
+
+h2 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+}
 
 .card {
   border: none;
@@ -53,35 +108,6 @@ p {
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
 }
 
-section {
-  padding: 50px 0;
-  background-color: #141414;
-}
-
-section h2 {
-  font-size: 2.5rem;
-  font-weight: bold;
-  text-align: center;
-  color: white;
-}
-
-section p {
-  font-size: 1.25rem;
-  color: #ddd;
-}
-
-
-.row-cols-1.row-cols-md-3.g-4 {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-}
-
-.card.shadow-lg {
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
-
-
 @media (max-width: 768px) {
   h1 {
     font-size: 3rem;
@@ -94,4 +120,21 @@ section p {
   section h2 {
     font-size: 2rem;
   }
+
+  .gallery-scroll {
+    gap: 10px;
+    padding: 10px 0;
+  }
+
+  .image-item {
+    width: 180px;
+    height: 300px;
+  }
+
+  .image-item:hover {
+    transform: scale(1.05);
+  }
 }
+
+
+
