--- a/src/app/multimedia/multimedia.component.html
+++ b/src/app/multimedia/multimedia.component.html
@@ -1,30 +1,41 @@
 <div class="container-fluid p-0">
-  <section id="bienvenida" class="text-center my-5 position-relative">
-    <div class="bg-overlay">
-      <h1 class="display-4 text-light">Bienvenido a la Página Multimedia</h1>
-      <p class="lead text-light">La combinación perfecta de contenido multimedia para entretenimiento.</p>
-    </div>
-  </section>
-
-  <section id="galeria" class="my-5">
-    <h2 class="text-center mb-4 text-white">Galería de Entretenimiento</h2>
-    <div class="gallery-container">
+  <section id="bienvenida" class="text-center position-relative">
+    <div class="gallery-container my-4">
       <div class="gallery-scroll">
         <div class="image-item" *ngFor="let image of images" (click)="selectImage(image)">
           <img [src]="image" class="img-fluid" alt="Imagen" />
         </div>
       </div>
     </div>
+    <div class="bg-overlay mb-5">
+      <h1 class="display-4 text-light">Bienvenido a la Página Multimedia</h1>
+      <p class="lead text-light">La combinación perfecta de contenido multimedia para entretenimiento.</p>
+    </div>
+
+
   </section>
 
+
   <section id="proyectos" class="my-5">
-    <h2 class="text-center mb-4 text-white">Proyectos</h2>
+    <h2 class="text-center mb-4 text-white">Prueba otros servicios</h2>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card shadow-lg">
           <img src="../../assets/Images/Musica.png" class="card-img-top" alt="Proyecto Musica" />
         </div>
         <a href="https://fercajas.github.io/Musica.github.io/" class="btn btn-light btn-lg mt-4" target="_blank">Abrir</a>
+      </div>
+      <div class="col">
+        <div class="card shadow-lg">
+          <img src="../../assets/Images/IAbot.png" class="card-img-top" alt="Proyecto Musica" />
+        </div>
+        <a href="#" class="btn btn-light btn-lg mt-4" target="_blank">Abrir</a>
+      </div>
+      <div class="col">
+        <div class="card shadow-lg">
+          <img src="../../assets/Images/IOTInterfazLuces.png" class="card-img-top" alt="Proyecto Musica" />
+        </div>
+        <a href="#" class="btn btn-light btn-lg mt-4" target="_blank">Abrir</a>
       </div>
     </div>
   </section>
